java/java-tests/testData/codeInsight/daemonCodeAnalyzer/advHighlighting/UnclosedComment.java
// unclosed comment


import java.io.*;
import java.net.*;

/**
class a {
  int i<error descr="Unclosed comment">;</error>